Add env to volumes in order to keep them inside the docker containers only. Make docker build quiet and add bash script for env init

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     image: rpc/server:v0.0.1
     volumes:
       - .:/opt/rpcserver
+      - /opt/rpcserver/encoder/env
+      - /opt/rpcserver/retail-product-classifier-server/env
+      - /opt/rpcserver/sku110k/env
     build:
       context: .
       dockerfile: ./Dockerfile
     ports:
-      - 127.0.0.1:5000:5000
       - 0.0.0.0:5000:5000
